fix selection layout on iOS

--- a/src/app/pages/staff/search-attendees/search-attendees.scss
+++ b/src/app/pages/staff/search-attendees/search-attendees.scss
@@ -14,9 +14,8 @@
 }
 
 .selected {
-  border-left-width: 6;
-  border-left-color: $success;
+  background-color: $success;
   &.ns-dark {
-    border-left-color: $success-dark;
+    background-color: $success-dark;
   }
 }
